--- a/docs/model_training-ngboost.ipynb
+++ b/docs/model_training-ngboost.ipynb
@@ -4,31 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Training (Smartcore)\n",
+    "# Model Training (NGBoost)\n",
     "\n",
     "If you have your own ground truth energy data, you can train a custom RouteE powertrain model.\n",
     "\n",
     "You'll want to make sure you've installed the proper dependencies that are not installed by default when you do a pip install. \n",
     "\n",
-    "In this example, we'll use the rust SmartCore trainer and estimator which you can install by doing:\n",
+    "In this example, we'll use the NGBoost trainer and estimator which you can install by doing:\n",
     "\n",
     "```bash\n",
-    "conda install rust\n",
-    "```\n",
-    "\n",
-    "Then, you'll have to build the python rust extension for powertrain:\n",
-    "\n",
-    "```bash\n",
-    "pip install maturin\n",
-    "\n",
-    "git clone https://github.com/NREL/routee-powertrain.git\n",
-    "cd routee-powertrain/rust\n",
-    "maturin develop --release\n",
-    "```\n",
-    "\n",
-    "This will install the `powertrain_rust` extension and should support usage of the following trainers:\n",
-    "\n",
-    "- `SmartcoreRandomForestTrainer`"
+    "pip install ngboost\n",
+    "```"
    ]
   },
   {
@@ -39,7 +25,18 @@
    "source": [
     "import nrel.routee.powertrain as pt\n",
     "\n",
-    "from nrel.routee.powertrain.trainers.smartcore_random_forest import SmartcoreRandomForestTrainer"
+    "from nrel.routee.powertrain.trainers.ngboost_trainer import NGBoostTrainer\n",
+    "from nrel.routee.powertrain.trainers.sklearn_random_forest import SklearnRandomForestTrainer\n",
+    "\n",
+    "from nrel.routee.powertrain.estimators.ngboost_estimator import NGBoostEstimator\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import time\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n"
    ]
   },
   {
@@ -90,7 +87,7 @@
        "      <th>speed_mph</th>\n",
        "      <th>grade_dec</th>\n",
        "      <th>miles</th>\n",
-       "      <th>gallons_fastsim</th>\n",
+       "      <th>gge</th>\n",
        "      <th>trip_id</th>\n",
        "      <th>road_class</th>\n",
        "    </tr>\n",
@@ -146,12 +143,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   speed_mph  grade_dec     miles  gallons_fastsim  trip_id  road_class\n",
-       "0   7.632068  -0.008963  0.015469         0.000813        1           3\n",
-       "1   6.329613  -0.047001  0.003516         0.000149        1           3\n",
-       "2  12.248512   0.000000  0.003402         0.000074        1           4\n",
-       "3  23.752604  -0.000463  0.019768         0.002194        1           1\n",
-       "4  46.024926  -0.004641  0.038378         0.000970        1           0"
+       "   speed_mph  grade_dec     miles       gge  trip_id  road_class\n",
+       "0   7.632068  -0.008963  0.015469  0.000813        1           3\n",
+       "1   6.329613  -0.047001  0.003516  0.000149        1           3\n",
+       "2  12.248512   0.000000  0.003402  0.000074        1           4\n",
+       "3  23.752604  -0.000463  0.019768  0.002194        1           1\n",
+       "4  46.024926  -0.004641  0.038378  0.000970        1           0"
       ]
      },
      "execution_count": 3,
@@ -160,6 +157,10 @@
     }
    ],
    "source": [
+    "# Load the data\n",
+    "df = pd.read_csv(\"../tests/routee-powertrain-test-data/sample_train_data.csv\")\n",
+    "df.rename(columns={'gallons_fastsim': 'gge'}, inplace=True)\n",
+    "df = df.dropna()\n",
     "df.head()"
    ]
   },
@@ -227,7 +228,7 @@
    "outputs": [],
    "source": [
     "energy_target = pt.DataColumn(\n",
-    "    name=\"gallons_fastsim\", \n",
+    "    name=\"gge\", \n",
     "    units=\"gallons_gasoline\", \n",
     ")"
    ]
@@ -275,7 +276,7 @@
     "    distance=distance,\n",
     "    target=energy_target,\n",
     "    test_size=0.2,\n",
-    "    #predict_method=predict_method\n",
+    "    predict_method=predict_method\n",
     ")"
    ]
   },
@@ -292,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer = SmartcoreRandomForestTrainer()"
+    "trainer = NGBoostTrainer(n_estimators=100)"
    ]
   },
   {
@@ -306,7 +307,29 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[iter 0] loss=-1.8281 val_loss=0.0000 scale=2.0000 norm=0.9229\n",
+      "[iter 20] loss=-2.0561 val_loss=0.0000 scale=2.0000 norm=0.6237\n",
+      "[iter 40] loss=-2.1728 val_loss=0.0000 scale=2.0000 norm=0.6440\n",
+      "[iter 60] loss=-2.2729 val_loss=0.0000 scale=2.0000 norm=0.6562\n",
+      "[iter 80] loss=-2.3627 val_loss=0.0000 scale=2.0000 norm=0.6721\n",
+      "[iter 0] loss=-1.8281 val_loss=0.0000 scale=1.0000 norm=0.4615\n",
+      "[iter 20] loss=-1.9869 val_loss=0.0000 scale=1.0000 norm=0.3494\n",
+      "[iter 40] loss=-2.1154 val_loss=0.0000 scale=2.0000 norm=0.6274\n",
+      "[iter 60] loss=-2.2324 val_loss=0.0000 scale=2.0000 norm=0.6587\n",
+      "[iter 80] loss=-2.3335 val_loss=0.0000 scale=2.0000 norm=0.6733\n",
+      "[iter 0] loss=-1.8281 val_loss=0.0000 scale=1.0000 norm=0.4615\n",
+      "[iter 20] loss=-1.9869 val_loss=0.0000 scale=1.0000 norm=0.3494\n",
+      "[iter 40] loss=-2.1156 val_loss=0.0000 scale=2.0000 norm=0.6275\n",
+      "[iter 60] loss=-2.2329 val_loss=0.0000 scale=2.0000 norm=0.6575\n",
+      "[iter 80] loss=-2.3344 val_loss=0.0000 scale=2.0000 norm=0.6724\n"
+     ]
+    }
+   ],
    "source": [
     "test_vehicle = trainer.train(df, config)"
    ]
@@ -326,51 +349,60 @@
     {
      "data": {
       "text/html": [
-       "<table border=\"1\" style=\"border-collapse: collapse;\"><tr><td colspan='2' style='border-bottom: 2px solid black;text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>speed_mph</td></tr><tr><td>Target</td><td>gallons_fastsim</td></tr><tr><td>Link RMSE</td><td>0.00158</td></tr><tr><td>Link Norm RMSE</td><td>0.99731</td></tr><tr><td>Link Weighted RPD</td><td>0.82687</td></tr><tr><td>Net Error</td><td>-0.33547</td></tr><tr><td>Actual Dist/Energy</td><td>18.87243</td></tr><tr><td>Predicted Dist/Energy</td><td>28.39965</td></tr><tr><td>Real World Predicted Dist/Energy</td><td>24.35648</td></tr><tr><td>Trip RPD</td><td>0.40308</td></tr><tr><td>Trip Weighted RPD</td><td>0.40308</td></tr><tr><td>Trip RMSE</td><td>0.01380</td></tr><tr><td>Trip Norm RMSE</td><td>0.33547</td></tr><tr><td colspan='2' style='border-bottom: 2px solid black;text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>grade_dec&speed_mph</td></tr><tr><td>Target</td><td>gallons_fastsim</td></tr><tr><td>Link RMSE</td><td>0.00136</td></tr><tr><td>Link Norm RMSE</td><td>0.85802</td></tr><tr><td>Link Weighted RPD</td><td>0.66681</td></tr><tr><td>Net Error</td><td>-0.24353</td></tr><tr><td>Actual Dist/Energy</td><td>18.87243</td></tr><tr><td>Predicted Dist/Energy</td><td>24.94792</td></tr><tr><td>Real World Predicted Dist/Energy</td><td>21.39615</td></tr><tr><td>Trip RPD</td><td>0.27729</td></tr><tr><td>Trip Weighted RPD</td><td>0.27729</td></tr><tr><td>Trip RMSE</td><td>0.01002</td></tr><tr><td>Trip Norm RMSE</td><td>0.24353</td></tr><tr><td colspan='2' style='border-bottom: 2px solid black;text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>grade_dec&road_class&speed_mph</td></tr><tr><td>Target</td><td>gallons_fastsim</td></tr><tr><td>Link RMSE</td><td>0.00128</td></tr><tr><td>Link Norm RMSE</td><td>0.80778</td></tr><tr><td>Link Weighted RPD</td><td>0.65296</td></tr><tr><td>Net Error</td><td>-0.25203</td></tr><tr><td>Actual Dist/Energy</td><td>18.87243</td></tr><tr><td>Predicted Dist/Energy</td><td>25.23138</td></tr><tr><td>Real World Predicted Dist/Energy</td><td>21.63926</td></tr><tr><td>Trip RPD</td><td>0.28836</td></tr><tr><td>Trip Weighted RPD</td><td>0.28836</td></tr><tr><td>Trip RMSE</td><td>0.01037</td></tr><tr><td>Trip Norm RMSE</td><td>0.25203</td></tr></table>"
+       "<table border=\"1\" style=\"border-collapse: collapse;\"><tr><td colspan='2' style='border-bottom: 2px solid black;text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>speed_mph</td></tr><tr><td>Target</td><td>gge</td></tr><tr><td>Link RMSE</td><td>0.00147</td></tr><tr><td>Link Norm RMSE</td><td>0.92759</td></tr><tr><td>Link Weighted RPD</td><td>0.76701</td></tr><tr><td>Net Error</td><td>-0.29279</td></tr><tr><td>Actual Dist/Energy</td><td>18.87243</td></tr><tr><td>Predicted Dist/Energy</td><td>26.68559</td></tr><tr><td>Real World Predicted Dist/Energy</td><td>22.88644</td></tr><tr><td>Trip RPD</td><td>0.34300</td></tr><tr><td>Trip Weighted RPD</td><td>0.34300</td></tr><tr><td>Trip RMSE</td><td>0.01204</td></tr><tr><td>Trip Norm RMSE</td><td>0.29279</td></tr><tr><td>Link NLL</td><td>35.87225</td></tr><tr><td>Link CRPS</td><td>0.00074</td></tr><tr><td>Link PICP</td><td>0.77000</td></tr><tr><td colspan='2' style='border-bottom: 2px solid black;text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>grade_dec&speed_mph</td></tr><tr><td>Target</td><td>gge</td></tr><tr><td>Link RMSE</td><td>0.00134</td></tr><tr><td>Link Norm RMSE</td><td>0.84574</td></tr><tr><td>Link Weighted RPD</td><td>0.66150</td></tr><tr><td>Net Error</td><td>-0.22083</td></tr><tr><td>Actual Dist/Energy</td><td>18.87243</td></tr><tr><td>Predicted Dist/Energy</td><td>24.22131</td></tr><tr><td>Real World Predicted Dist/Energy</td><td>20.77299</td></tr><tr><td>Trip RPD</td><td>0.24824</td></tr><tr><td>Trip Weighted RPD</td><td>0.24824</td></tr><tr><td>Trip RMSE</td><td>0.00908</td></tr><tr><td>Trip Norm RMSE</td><td>0.22083</td></tr><tr><td>Link NLL</td><td>28.80077</td></tr><tr><td>Link CRPS</td><td>0.00067</td></tr><tr><td>Link PICP</td><td>0.77000</td></tr><tr><td colspan='2' style='border-bottom: 2px solid black;text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>grade_dec&road_class&speed_mph</td></tr><tr><td>Target</td><td>gge</td></tr><tr><td>Link RMSE</td><td>0.00134</td></tr><tr><td>Link Norm RMSE</td><td>0.84576</td></tr><tr><td>Link Weighted RPD</td><td>0.66152</td></tr><tr><td>Net Error</td><td>-0.22085</td></tr><tr><td>Actual Dist/Energy</td><td>18.87243</td></tr><tr><td>Predicted Dist/Energy</td><td>24.22193</td></tr><tr><td>Real World Predicted Dist/Energy</td><td>20.77352</td></tr><tr><td>Trip RPD</td><td>0.24827</td></tr><tr><td>Trip Weighted RPD</td><td>0.24827</td></tr><tr><td>Trip RMSE</td><td>0.00908</td></tr><tr><td>Trip Norm RMSE</td><td>0.22085</td></tr><tr><td>Link NLL</td><td>29.10197</td></tr><tr><td>Link CRPS</td><td>0.00067</td></tr><tr><td>Link PICP</td><td>0.77000</td></tr></table>"
       ],
       "text/plain": [
        "====================================================\n",
        "Feature Set ID:                  speed_mph\n",
-       "Target:                          gallons_fastsim\n",
-       "Link RMSE                        0.002\n",
-       "Link Norm RMSE                   0.997\n",
-       "Link Weighted RPD                0.827\n",
-       "Net Error                        -0.335\n",
+       "Target:                          gge\n",
+       "Link RMSE                        0.001\n",
+       "Link Norm RMSE                   0.928\n",
+       "Link Weighted RPD                0.767\n",
+       "Net Error                        -0.293\n",
        "Actual Dist/Energy               18.872\n",
-       "Predicted Dist/Energy            28.400\n",
-       "Real World Predicted Dist/Energy 24.356\n",
-       "Trip RPD                         0.403\n",
-       "Trip Weighted RPD                0.403\n",
-       "Trip RMSE                        0.014\n",
-       "Trip Norm RMSE                   0.335\n",
+       "Predicted Dist/Energy            26.686\n",
+       "Real World Predicted Dist/Energy 22.886\n",
+       "Trip RPD                         0.343\n",
+       "Trip Weighted RPD                0.343\n",
+       "Trip RMSE                        0.012\n",
+       "Trip Norm RMSE                   0.293\n",
+       "Link NLL                         35.872\n",
+       "Link CRPS                        0.001\n",
+       "Link PICP                        0.770\n",
        "====================================================\n",
        "Feature Set ID:                  grade_dec&speed_mph\n",
-       "Target:                          gallons_fastsim\n",
+       "Target:                          gge\n",
        "Link RMSE                        0.001\n",
-       "Link Norm RMSE                   0.858\n",
-       "Link Weighted RPD                0.667\n",
-       "Net Error                        -0.244\n",
+       "Link Norm RMSE                   0.846\n",
+       "Link Weighted RPD                0.662\n",
+       "Net Error                        -0.221\n",
        "Actual Dist/Energy               18.872\n",
-       "Predicted Dist/Energy            24.948\n",
-       "Real World Predicted Dist/Energy 21.396\n",
-       "Trip RPD                         0.277\n",
-       "Trip Weighted RPD                0.277\n",
-       "Trip RMSE                        0.010\n",
-       "Trip Norm RMSE                   0.244\n",
+       "Predicted Dist/Energy            24.221\n",
+       "Real World Predicted Dist/Energy 20.773\n",
+       "Trip RPD                         0.248\n",
+       "Trip Weighted RPD                0.248\n",
+       "Trip RMSE                        0.009\n",
+       "Trip Norm RMSE                   0.221\n",
+       "Link NLL                         28.801\n",
+       "Link CRPS                        0.001\n",
+       "Link PICP                        0.770\n",
        "====================================================\n",
        "Feature Set ID:                  grade_dec&road_class&speed_mph\n",
-       "Target:                          gallons_fastsim\n",
+       "Target:                          gge\n",
        "Link RMSE                        0.001\n",
-       "Link Norm RMSE                   0.808\n",
-       "Link Weighted RPD                0.653\n",
-       "Net Error                        -0.252\n",
+       "Link Norm RMSE                   0.846\n",
+       "Link Weighted RPD                0.662\n",
+       "Net Error                        -0.221\n",
        "Actual Dist/Energy               18.872\n",
-       "Predicted Dist/Energy            25.231\n",
-       "Real World Predicted Dist/Energy 21.639\n",
-       "Trip RPD                         0.288\n",
-       "Trip Weighted RPD                0.288\n",
-       "Trip RMSE                        0.010\n",
-       "Trip Norm RMSE                   0.252\n",
+       "Predicted Dist/Energy            24.222\n",
+       "Real World Predicted Dist/Energy 20.774\n",
+       "Trip RPD                         0.248\n",
+       "Trip Weighted RPD                0.248\n",
+       "Trip RMSE                        0.009\n",
+       "Trip Norm RMSE                   0.221\n",
+       "Link NLL                         29.102\n",
+       "Link CRPS                        0.001\n",
+       "Link PICP                        0.770\n",
        "===================================================="
       ]
      },
@@ -380,7 +412,93 @@
     }
    ],
    "source": [
-    "test_vehicle.errors"
+    "test_vehicle.errors\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To use this model to predict results on a dataframe, use the following code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gge</th>\n",
+       "      <th>gge_std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000852</td>\n",
+       "      <td>0.000296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000152</td>\n",
+       "      <td>0.000065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.000171</td>\n",
+       "      <td>0.000106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.001199</td>\n",
+       "      <td>0.000789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.001252</td>\n",
+       "      <td>0.000776</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        gge   gge_std\n",
+       "0  0.000852  0.000296\n",
+       "1  0.000152  0.000065\n",
+       "2  0.000171  0.000106\n",
+       "3  0.001199  0.000789\n",
+       "4  0.001252  0.000776"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_df = test_vehicle.predict(df, ['grade_dec', 'speed_mph','road_class'], 'miles', True)\n",
+    "result_df.head()"
    ]
   },
   {
@@ -414,6 +532,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To retrieve a saved model from a json file for further use can be done by doing the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_vehicle = pt.Model.from_file(\"Test_Vehicle.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## RouteE Compass Integration\n",
     "\n",
     "If you want to use this model with RouteE Compass, you can export any of the estimators as binary file and that can be loaded into RouteE Compass.\n",
@@ -423,18 +557,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'speed_mph': <nrel.routee.powertrain.estimators.smart_core.SmartCoreEstimator at 0x127cc7750>,\n",
-       " 'grade_dec&speed_mph': <nrel.routee.powertrain.estimators.smart_core.SmartCoreEstimator at 0x127d50690>,\n",
-       " 'grade_dec&road_class&speed_mph': <nrel.routee.powertrain.estimators.smart_core.SmartCoreEstimator at 0x127d50850>}"
+       "{'speed_mph': <nrel.routee.powertrain.estimators.ngboost_estimator.NGBoostEstimator at 0x1597b3910>,\n",
+       " 'grade_dec&speed_mph': <nrel.routee.powertrain.estimators.ngboost_estimator.NGBoostEstimator at 0x159802b90>,\n",
+       " 'grade_dec&road_class&speed_mph': <nrel.routee.powertrain.estimators.ngboost_estimator.NGBoostEstimator at 0x159890850>}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
